version/0.12/_sources/api/solver/_autosummary/settings/particle_mixture_child.rst.txt
:orphan:

.. _particle_mixture_child:

particle_mixture_child
======================

.. currentmodule:: ansys.fluent.core.solver.settings_231.particle_mixture_child

.. autoclass:: particle_mixture_child
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

========================================================   ====================================

Child                                                                                   Summary

========================================================   ====================================
:ref:`density <density_5>`                                                     'density' child.

:ref:`specific_heat <specific_heat_4>`                                   'specific_heat' child.

:ref:`species <species>`                                                       'species' child.

:ref:`vp_equilib <vp_equilib>`                                              'vp_equilib' child.

:ref:`thermal_conductivity <thermal_conductivity_3>`              'thermal_conductivity' child.

:ref:`viscosity <viscosity_2>`                                               'viscosity' child.

:ref:`dpm_surften <dpm_surften>`                                           'dpm_surften' child.

:ref:`emissivity <emissivity_2>`                                            'emissivity' child.

:ref:`scattering_factor <scattering_factor_2>`                       'scattering_factor' child.

:ref:`vaporization_model <vaporization_model>`                      'vaporization_model' child.

:ref:`averaging_coefficient_t <averaging_coefficient_t>`       'averaging_coefficient_t' child.

:ref:`averaging_coefficient_y <averaging_coefficient_y>`       'averaging_coefficient_y' child.

:ref:`thermophoretic_co <thermophoretic_co>`                         'thermophoretic_co' child.

:ref:`reaction_model <reaction_model>`                                  'reaction_model' child.

:ref:`mixture_species <mixture_species_1>`                             'mixture_species' child.

========================================================   ====================================

.. rubric:: Included in:

==========================================   =============================

Parent                                                             Summary

==========================================   =============================
:ref:`particle_mixture <particle_mixture>`       'particle_mixture' child.

==========================================   =============================

